--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8888
-spring.application.name=mssc-brewery-config
+spring.application.name=brewery-config
 
 spring.cloud.config.server.git.uri=https://github.com/fnmabreu/mssc-brewery-config-repo
 spring.cloud.config.server.git.clone-on-start=true
@@ -13,5 +13,7 @@ encrypt.key=secretkey
 
 spring.security.user.name=MyUserName
 spring.security.user.password=MySecretPassword
+
+eureka.instance.prefer-ip-address=true
 
 eureka.client.service-url.defaultZone=http://netflix:eureka@localhost:8761/eureka
